# anime-recommender-system

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/: anime_with_synopsis.csv  genre_id_mapping.pickle  genre_index_mapping.pickle  user_with_vector_dict.pickle
examples/: README.md  predict.py
model/ranking_base/: encode_config.json  model_state_dict.pt  training_status.json
recanime/anime_store/: base.py  excel_store.py  store.py
recanime/document_store/: excel.py
recanime/recommender/: base.py  layer.py
recanime/recommender/ranking_base_filter/: model.py  predict.py
recanime/schema/: predict.py  training.py  user.py
recanime/training/: functools.py  trainer.py
recanime/utils/: model_utils.py  rec_utils.py
recommender/ranking_base_filter/: model.py
scripts/: README.md  main.ipynb  recommend.ipynb  release.py  show_opimizer.ipynb  training.ipynb
test/: conftest.py
test/anime_store/: test_store.py
tests/: conftest.py
tests/anime_store/: test_store.py
tests/recommender/ranking_base_filter/: test_predict.py
training/: dataset.py  functools.py  trainer.py
utils/aio/: batch_concurrency.py  jupyter_functools.py
