[tool.poetry]
name = "recanime"
version = "0.1.1"
description = "Anime recommender system builded by Pytorch"
authors = ["yoshi <yoshi4868686@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.1"
pydantic = "^1.9.1"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
questionary = "^1.10.0"
pep440-version-utils = "^0.3.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
